[package]
name = "buckshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.53.2", features = ["tcp", "tls", "noise", "tokio", "macros", "yamux" ] }
tokio = { version = "1.35.0", features = ["full"] }

[dependencies.libp2p-yamux]
version = "0.45.1"
optional = true

